/* media.proto/Open GoPro, Version 2.0 (C) Copyright 2021 GoPro, Inc. (http://gopro.com/OpenGoPro). */
/* This copyright was auto-generated on Tue Apr  9 19:25:32 UTC 2024 */

/***********************************************************************************************************************
 *
 * This file is automatically generated!!! Do not modify manually.
 *
 **********************************************************************************************************************/

/**
 * Commands to query and manipulate media files
 */

syntax = "proto2";
package open_gopro;

import "response_generic.proto";

/**
 * Get the last captured media filename
 *
 * Returns a @ref ResponseLastCapturedMedia
 */
message RequestGetLastCapturedMedia {}

/**
 * The Last Captured Media
 *
 * Message is sent in response to a @ref RequestGetLastCapturedMedia.
 *
 * This contains the relative path of the last captured media starting from the `DCIM` directory on the SDCard. Depending
 * on the type of media captured, it will return:
 *
 * - The single media path for single photo/video media
 * - The path to the first captured media in the group for grouped media
 */
message ResponseLastCapturedMedia {
    optional EnumResultGeneric result = 1; // Was the request successful?
    /**
     * Last captured media if result is RESULT_SUCCESS. Invalid if result is RESULT_RESOURCE_NOT_AVAILBLE.
     */
    optional Media             media  = 2;
}
